# eduDuck

./: .gitignore  LICENSE  README.md  build.sh  main.py  messages.pot  package-lock.json  package.json  prompts.json  requirements.txt  tsconfig.json
.github/: FUNDING.yml
routes/: duckAI.py  flashcardGenerator.py  noteAnalyzer.py  noteEnhancer.py  oauth.py  quiz.py  studyPlanGenerator.py  utils.py
routes/QuizParser/: Cargo.toml
routes/QuizParser/src/: lib.rs
routes/StudyPlanParser/: Cargo.toml
routes/StudyPlanParser/src/: lib.rs
routes/SubmitQuizResult/: Cargo.toml
static/: EnhancedNotesStyle.css  EnhancedScript.js  KeyStyle.css  Quiz.js  QuizStyle.css  base.js  body.css  flash.css  header.css  microsoft-identity-association.json  robots.txt  script.js  sitemap.xml  spinner.css  style.css  theme-toggle.css  variables.css
static/Components/: AutoResize.js  DarkModeToggle.js  FileUploadHandler.js  GetFreeLimitUsage.js  GetUserPFP.js  ModelSelector.js  StatusManager.ts  UserMenuPopUp.js  ValidateInput.js  background-anim.ts  csrf.js  fileDrop.ts
static/DuckAI/: api.ts  chat.ts  main.ts  ui.ts  (+3 more)
templates/: DuckAI.html  Quiz.html  QuizGenerator.html  QuizResult.html  base.html  enhancedNotes.html  flashCardGenerator.html  flashcards.html  index.html  keyAccess.html  mainPage.html  noteEnhancer.html  quiz.html  result.html
tests/: conftest.py  test_basic.py  test_duck_ai.py  test_extract_topic.py  test_flashcard_generator.py  test_note_analyzer.py  test_note_enhancer.py  test_quiz.py  test_study_plan_generator.py  test_utils.py
translations/: messages.pot
(+110 files in other folders)
